...
    weak var delegate: MainHeaderViewDelegate?
    
    private func setupView() {
        instantiate()
        productCountLabel.isHidden = true
        // for test
        addToCartButton.accessibilityLabel = "ShowYourCart"
        productCountLabel.accessibilityLabel = "ProductCountLabel"
    }
    
    override func layoutSubviews() {
        super.layoutSubviews()
        productCountLabel.layer.cornerRadius = productCountLabel.bounds.width / 2
        productCountLabel.layer.masksToBounds = true
...
