...
                </label>
                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9Yg-KU-6AM">
                    <rect key="frame" x="16" y="352" width="349" height="45"/>
                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="16"/>
                    <inset key="contentEdgeInsets" minX="0.0" minY="8" maxX="0.0" maxY="8"/>
                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                    <state key="normal" title="Back To Home" backgroundImage="buyButtonBG">
                        <color key="titleColor" name="headerTextColor"/>
                    </state>
                    <connections>
                        <action selector="back" destination="-1" eventType="touchUpInside" id="INc-G5-HPD"/>
                    </connections>
                </button>
...
