...
                                        <color key="titleColor" name="cellTitleColor"/>
                                    </state>
                                </button>
                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="r6w-Pr-U7n">
                                    <rect key="frame" x="150" y="0.0" width="71" height="60"/>
                                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                    <state key="normal" image="iconAdd" backgroundImage="buttonBG">
                                        <color key="titleColor" name="cellTitleColor"/>
                                    </state>
                                    <connections>
                                        <action selector="plusAction" destination="-1" eventType="touchUpInside" id="drd-bM-QXj"/>
                                    </connections>
                                </button>
...
